@@ -5020,6 +5020,18 @@ bool FFmpeg_Transcoder::audio_size(size_t *filesize, AVCodecID codec_id, BITRATE
         *filesize = static_cast<size_t>(1150 * (*filesize) / 1000); // add overhead
         break;
     }
+    case AV_CODEC_ID_FLAC:
+    {
+        int bytes_per_sample    = av_get_bytes_per_sample(AV_SAMPLE_FMT_S32); // Unsigned/signed 32 have the same width
+
+        // File size:
+        // file duration * sample rate (HZ) * channels * bytes per sample
+        // + WAV_HEADER + DATA_HEADER + (with FFMpeg always) LIST_HEADER
+        // The real size of the list header is unkown as we don't know the contents (meta tags)
+        *filesize += static_cast<size_t>(duration * sample_rate * (channels >= 2 ? 2 : 1) * bytes_per_sample / AV_TIME_BASE * 0.7);
+        *filesize = static_cast<size_t>(1150 * (*filesize) / 1000); // add overhead
+        break;
+    }
     case AV_CODEC_ID_NONE:
     {
         break;
